index.css
.container {
    width: 100vw;
    height: 100vh;
    background-image: url('/assets/home.png');
    background-size: cover;
    background-repeat: no-repeat;

    display: flex;
    flex-direction: row;
    align-items: center;
}


/*-----------Ancients-----------*/


.ancient-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: 50px;
    width: 40%;
    height: 100%; 
}

.ancient {
    width: 200px;
    height: 300px;
    background-size: 100% 100%;
    border: 1px solid transparent;
    transition: all 0.2s ease-in;
}

.ancient:hover {
    border: 1px solid white;
}

.ancient-chosen {
    border: 1px solid #dc143c;
}

.ancient-chosen:hover {
    border: 1px solid #dc143c;
}

.azathoth {
    background-image: url('assets/Ancients/Azathoth.png');
}

.cthulthu {
    background-image: url('assets/Ancients/Cthulthu.png');
}

.iogsothoth {
    background-image: url('assets/Ancients/IogSothoth.png');
}

.shubniggurath {
    background-image: url('assets/Ancients/ShubNiggurath.png');
}


/*------------Difficulty--------------*/


.difficulty-container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 20%;
    height: 100%;
}

.difficulty-list {
    width: 80%;
    height: 40%;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;

    opacity: 1;
    transition: opacity 0.7s;
}

.difficulty-list-hidden {
    visibility: hidden;
    opacity: 0;
}

.difficulty-choice {
    width: 100%;
    height: 50px;
    font-size: 30px;
    background-color: rebeccapurple;
    color: white;
    border: 1px solid rebeccapurple;
    border-radius: 16px;
    transition: all 0.2s ease-in;
}

.difficulty-choice-chosen {
    background-color: #dc143c;
}

.difficulty-choice:hover {
    border: 1px solid white;
}


/*-------------Cards----------------*/


.card-container {

    width: 40%;
    height: 100%;
    overflow-y: hidden;
}

.card-shuffle-button-container {
    display: flex;
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 100%;
    
    transform: translateY(0%);
    opacity: 1;
    transition: opacity 0.7s;
}

.card-shuffle-button-container-hidden {
    visibility: hidden;
    transform: translateY(-100%);
    opacity: 0;
}

.card-shuffle-button {
    width: 45%;
    height: 50px;
    font-size: 30px;
    background-color: blueviolet;
    color: white;
    border: 1px solid transparent;
    border-radius: 16px;
    transition: all 0.2s ease-in;
}

.card-shuffle-button:hover {
    border: 1px solid white;
}


.card-main-features {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 50px;

    width: 100%;
    height: 100%;

    transform: translateY(-100%);
    opacity: 1;
    transition: opacity 0.7s;
}

.card-main-features-hidden {
    visibility: hidden;
    transform: translateY(0%);
    opacity: 0;
}

.card-tracker-container {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    width: 100%;
}

.card-tracker {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;

    width: 150px;
}

.stage-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 8px;
}

.stage-title {
    color: white;
    text-align: center;
    font-size: 18px;
    transition: all 0.3s;
}

.stage-title-empty {
    color: #dc143c;
}

.stage-tracker {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    gap: 5px;
}

.stage-count {
    display: flex;
    align-items: center;
    justify-content: center;

    height: 40px;
    width: 40px;
    border-radius: 50%;

    color: white;
    font-size: 14px
}

.count-green {
    background-color: green;
}

.count-blue {
    background-color: blue;
}

.count-brown {
    background-color: #a0522d;
}

.card-deck {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 50px
}

.card-pop-button {
    width: 200px;
    height: 300px; 
    background-size: 100% 100%;
}

.card-reveal {
    width: 200px;
    height: 300px;
    border: 1px solid white;
    background-size: 100% 100%;
}

